# src/main/java/de/master/lernprogramm/domain/service/ProfilService.java
@@ -6,5 +6,7 @@ public interface ProfilService {
 
     Profil getProfilById(String profilId);
 
+    Profil saveProfil(Profil profilToSave);
+
     void setAufgabeVonProfilAbgeschlossen(Integer userId, Integer aufgabeId, double ergebnisUser);
 }
